@@ -1,3 +1,10 @@
+2006-08-28  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
+	* gtk/gtktreeview.c (selection_changed): Don't grab focus to treeview
+	on selection change as it makes no sense.
+	* gtk/gtktreeview.c (check_if_can_focus): Remove forcefully setting
+	the cursor row to avoid fighting for the selection.
+
 2006-08-24  Kristian Rietveld  <kris@imendio.com>
 
 	* gtk/gtkcombobox.c (gtk_combo_box_popup): move set_cursor
